@@ -40,16 +40,18 @@
 #%# capabilities=autoconf
 
 use strict;
+# use Muninnode;
 
 my $statefile = "@@PLUGSTATE@@/munin-cupsys-pages.state";
+# my $statefile = "$Muninnode::PLUGSTATE/munin-cupsys-pages.state";
 my $pos       = undef;
 my %printers  = ();
 
-my $LOGDIR    = $ENV{logdir}   || "/var/log/cups/";
-my $LOGFILE   = $ENV{logfile}  || "page_log";
-my $MAXLABEL  = $ENV{maxlabel} || 20;
+my $LOGDIR    = $ENV{'logdir'}   || '/var/log/cups';
+my $LOGFILE   = $ENV{'logfile'}  || 'page_log';
+my $MAXLABEL  = $ENV{'maxlabel'} || 20;
 
-if($ARGV[0] and $ARGV[0] eq "autoconf" ) {
+if($ARGV[0] and $ARGV[0] eq 'autoconf' ) {
     my $logfile;
     if(-d $LOGDIR) {
 	$logfile = "$LOGDIR/$LOGFILE";
@@ -77,15 +79,15 @@ if (-f "$logfile.0") {
     $rotlogfile = $logfile . ".1";
 } elsif (-f "$logfile.01") {
     $rotlogfile = $logfile . ".01";
-} 
+}
 
 if (! -f $logfile and ! -f $rotlogfile) {
     print "pages.value $logfile $rotlogfile U\n";
     exit 0;
 }
 
-if (-f "$statefile") {
-    open(IN, "$statefile") or exit 4;
+if (-f $statefile) {
+    open(IN, $statefile) or exit 4;
     if(<IN> =~ /^(\d+)$/) {
 	$pos = $1;
     }
@@ -129,20 +131,31 @@ if($ARGV[0] and $ARGV[0] eq "config") {
     print "graph_title CUPS pages printed\n";
     print "graph_args --base 1000 -l 0\n";
     print "graph_vlabel pages/\${graph_period}\n";
-    print "graph_order ".join(" ",sort(keys(%printers)))."\n";
+    print "graph_order ".
+      join(" ",
+	   sort(map { s/^[^a-zA-Z_]*//; s/[^a-zA-Z0-9_]/_/g; $_; }
+		keys(%printers))),
+	   "\n";
     foreach my $printer (sort(keys %printers)) {
-	print "$printer.label $printer\n";
+	# Convert printername to something legal
+	my $p = $printer;
+	$printer =~ s/^[^a-zA-Z_]*//;
+	$printer =~ s/[^a-zA-Z0-9_]/_/g;
+	print "$printer.label $p\n";
 	print "$printer.type DERIVE\n";
 	print "$printer.min 0\n";
     }
     exit 0;
 } else {
     foreach my $printer (sort(keys %printers)) {
-	print "$printer.value ".$printers{$printer}."\n";
+	my $p = $printer;
+	$printer =~ s/^[^a-zA-Z_]*//;
+	$printer =~ s/[^a-zA-Z0-9_]/_/g;
+	print "$printer.value ".$printers{$p}."\n";
     }
 }
 
-sub parselogfile {    
+sub parselogfile {
     my ($fname, $start, $stop) = @_;
     open (LOGFILE, $fname) or exit 3;
     seek (LOGFILE, $start, 0) or exit 2;
@@ -157,5 +170,7 @@ sub parselogfile {
 	    }
 	} 
     }
-    close(LOGFILE);    
+    close(LOGFILE);
 }
+
+
